# UAV_competition

./: README.md
camera/devel/: .catkin  .rosinstall  local_setup.sh
camera/devel/include/orbbec_camera/: DeviceInfo.h  Extrinsics.h  GetBoolRequest.h  GetBoolResponse.h  GetCameraInfoRequest.h  GetCameraInfoResponse.h  GetCameraParamsRequest.h  GetCameraParamsResponse.h  GetDeviceInfoRequest.h  GetDeviceInfoResponse.h  GetInt32Request.h  GetInt32Response.h  GetStringRequest.h  GetStringResponse.h  Metadata.h  SetBoolRequest.h  SetBoolResponse.h  SetInt32Request.h  SetInt32Response.h  SetStringRequest.h  SetStringResponse.h
camera/devel/include/rc_msgs/: identify_results.h  single_result.h
camera/devel/lib/cam_driver/: cam_driver_node
camera/devel/lib/mv_driver/: mv_driver_node
camera/devel/lib/orbbec_camera/: list_depth_work_mode_node  list_devices_node  ob_cleanup_shm_node  orbbec_camera_node
camera/devel/lib/pkgconfig/: cam_driver.pc  mv_driver.pc  orbbec_camera.pc  rc_msgs.pc  rc_msgs_analyzation.pc  video_pub.pc
camera/devel/lib/rc_msgs_analyzation/: rc_msgs_analyzation_node
camera/devel/lib/video_pub/: video_pub_node
camera/src/img_displayer/src/: img_displayer.cpp
identify/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
identify/devel/include/rc_msgs/: calibrateResult.h  detection.h  point.h  results.h  stepConfig.h
identify/src/recognize/: CMakeLists.txt
identify/src/recognize/src/: recognize.cpp
realsense-ros/realsense2_camera/launch/: rs_camera.launch
robot_serial/: CMakeLists.txt
robot_serial/src/: main.cpp
(+56 files in other folders)
